--- a/src/Weather.css
+++ b/src/Weather.css
@@ -4,7 +4,6 @@
     color: #5c715e;
     padding: 16px;
     border-radius: 4px;
-    
     background: linear-gradient(180deg, rgb(242, 249, 241) 0%, rgb(182, 205, 189) 100%);
 }
 
@@ -52,4 +51,8 @@
     margin-left: 5px;
     position: relative;
     top: -32px;
+}
+
+.WeatherTemperature a {
+    text-decoration: none;
 }
