--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 .App footer {
     font-family: arial, sans-serif;
-    color: #484b49;
+    color: #b6cdbd;
     margin: 10px auto;
     max-width: 700px;
     text-align: center;
